--- a/tests/index.htm
+++ b/tests/index.htm
@@ -35,6 +35,10 @@
 				console.log("SUCCES");
 				console.log(path);
 			};
+
+			this.getCost = function(cell){
+				return cell.x;
+			}
 		}
 
 		var grid = [];
