--- a/tests/index.htm
+++ b/tests/index.htm
@@ -13,14 +13,23 @@
 	
 	<h1>Unit tests ? Not really.</h1>	
 	
-	<script src="../src/jamtk_JsonLevelLoader.js"></script>
+	<script src="../src/jamtk_Looper.js"></script>
 	<script src="../src/jamtk_entities.js"></script>
 	<script src="../src/jamtk_AStarGraphFinder.js"></script>
 	<script src="../src/jamtk_AStarGridFinderAdapter.js"></script>
 	
 	<script type="text/javascript">
-var t  = new JAMTK.JsonLevelLoader("super%id%aaa");
-t.loadLevel(12);
+var t  = new JAMTK.Looper();
+t.timeInterval = 1000/1;
+
+t.callback = function(looper){
+	console.log("LOOP !");
+	console.log(looper.frameNumber);
+	console.log(looper.elapsedTime);
+};
+
+t.start();
+
 		var Delegate1 = function(){
 			
 			this.failToReachDestination = function(){
